Fix #22 (Scrolling causes list item overlap in compact view) Root cause was multiple list builders running (async) at once, leading to duplicate elements in each batch. Solved by cancelling queued batch functions if a new one gets queued.   - Also made some css more accurate, though this is only tangentially related.

--- a/public/css/search.scss
+++ b/public/css/search.scss
@@ -188,7 +188,7 @@ $mobile-breakpoint: 1000px;
 
 .item_batch {
     display: grid;
-    grid-template-rows: repeat(20, 1fr);
+    // grid-template-rows: repeat(20, 1fr);
     grid-row-gap: 4px;
     margin-bottom: 4px;
 }
